# infomaid

./: .gitignore  README.md  pyproject.toml  pyproject__poetryBeforeVersion2.toml
data/: astrobill_details.txt  data.csv
data_technical/: 1.txt  2.txt  3.txt  4.txt  README.md
data_test/: README.md
docs/: ENHANCED_RAG_README.md  IMPLEMENTATION_SUMMARY.md
ethicalAbstract_llama2/: myAI_llama2_0.md  myAI_llama2_1.md  myAI_llama2_2.md  myAI_llama2_3.md  myAI_llama2_4.md
infomaid/: README.md  chromadb_config.py  enhanced_document_processor.py  enhanced_rag.py  get_embedding_function.py  main.py  populate_database.py  query_data.py  test_rag.py  updateTXTandCVSLoading.md
misc/: README.md  old_pyproject.toml  x_pyproject.toml
promptFiles/: colour.txt  mit.txt  tell_me_a_joke.txt
tests/: README.md  demo_enhanced_rag.py  test_enhanced_rag.py  test_rag.py
