[tool.poetry]
name = "infomaid"
version = "0.10.3"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"


[tool.poetry.scripts]
infomaid = "infomaid.main:cli"

[tool.poetry.dependencies]
# the project was designed
# for 3.11 but 3.10 also works
python = ">=3.10,<3.13" 
# python = "^3.9" 
typer = "^0.9.0"
rich = "^13.7.1"
black = "^24.2.0"
ollama = "^0.1.7"
pypdf = "^4.2.0"
langchain = "^0.1.17"
chromadb = "^0.5.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
