[project]
name = "infomaid"
version = "0.20.2"
description = "A simple textual AI RAG application using Ollama for generative AI, chatting with PDFs AND chatting (querying) documents prepared in xml!"
authors = [
    {name = "Oliver Bonham-Carter",email = "obonhamcarter@allegheny.edu"}
]
readme = "README.md"
#requires-python = ">=3.10"
#requires-python = ">=3.13"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "rich (>=13.9.4,<14.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "ollama (>=0.4.6,<0.5.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "unstructured-client (>=0.29.0,<0.30.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "langchain-community (>=0.3.14,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
infomaid = "infomaid.main:cli"


