[tool.poetry]
name = "infomaid"
version = "0.21.5"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"


[tool.poetry.scripts]
infomaid = "infomaid.main:app"

[tool.poetry.dependencies]
# the project was designed
# for 3.11 but 3.10 also works

#python = ">=3.13,<4" 
#python = ">=3.13" 
python = ">=3.10,<4" 
typer = ">=0.12.0"
rich = "^15.0.0"
black = "^26.3.1"
ollama = ">=0.4.6"
pypdf = "^6.0.0"
chromadb = ">=1.3.5,<2.0.0"
pytest = "^9.0.3"
unstructured-client = "^0.22.0"
nltk = "^3.9.1"
langchain-chroma = ">=1.0.0"
langchain-community = ">=0.3.18"
langchain-ollama = ">=0.2.0"
scikit-learn = "^1.3.0"
numpy = ">=2.1.0"
onnxruntime = ">=1.14.1,<1.24.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#trial python work
[tool.pytest.ini_options]
pythonpath = "infomaid"
